log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 06:26:34 PM UTC: 
 tests:  0|6
total_score: 0/70
9f41f28
Tue 28 Mar 2023 06:47:09 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
357dcd0
Tue 28 Mar 2023 06:52:49 PM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
a07722c
Tue 28 Mar 2023 07:02:00 PM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b87b909
Fri 31 Mar 2023 08:53:21 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b45b383
Fri 31 Mar 2023 08:57:52 PM UTC: 
 arraylist.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:26:33: error: expected ‘;’ before ‘l’
   26 |     l->capacity= (l->capacity)*2
      |                                 ^
      |                                 ;
   27 |     l->data =(void*) realloc(l->data, sizeof(void*)*l->capacity);
      |     ~                            
Compilation failed
01cd0a0
Fri 31 Mar 2023 08:58:12 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
591b8db
Fri 31 Mar 2023 09:07:27 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 20/70
2be176d
Fri 31 Mar 2023 09:19:15 PM UTC: 
 arraylist.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  3|4
total_score: 20/70
6aec114
Fri 31 Mar 2023 09:20:55 PM UTC: 
 arraylist.c | 3 ---
 1 file changed, 3 deletions(-)
test.c: In function ‘push’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:58:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   58 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9daf7d2
Fri 31 Mar 2023 09:21:04 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7757507
Fri 31 Mar 2023 09:22:17 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a87d34d
Fri 31 Mar 2023 09:22:26 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a7729c2
Fri 31 Mar 2023 09:23:37 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
47289c3
Fri 31 Mar 2023 09:26:12 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
63f6f3e
Fri 31 Mar 2023 09:27:00 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ab0c59
Fri 31 Mar 2023 09:27:24 PM UTC: 
 arraylist.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 30/70
c52557f
Fri 31 Mar 2023 09:29:38 PM UTC: 
 arraylist.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
df593b0
Fri 31 Mar 2023 09:29:53 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a367d09
Fri 31 Mar 2023 09:30:17 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:45:13: error: ‘k’ undeclared (first use in this function)
   45 |     l->data[k]=data;
      |             ^
arraylist.c:45:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2542390
Fri 31 Mar 2023 09:30:28 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b033535
Fri 31 Mar 2023 09:30:54 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1e131ab
Fri 31 Mar 2023 09:31:15 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
da78e1b
Fri 31 Mar 2023 09:32:22 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e9c7238
Fri 31 Mar 2023 09:33:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e52fe18
Fri 31 Mar 2023 09:34:52 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
10523e5
